2005-08-05  Alp Toker  <alp@atoker.com>

	* monodevelop.in: Remove 'function' bash-ism to make the launcher script
	POSIX sh compatible.

2005-08-02	Chrstian Hergert	<christian.hergert@gmail.com>

	* configure.in: Remove monoquery autoconf options. We no longer need them.
	* build/data/resources/icons: Added some icons donated from MySQL.

2005-07-21  Peter Johanson  <latexer@gentoo.org> 

	* configure.in: Bump boo dep as needed by recent completion changes.

2005-07-18  Lluis Sanchez Gual  <lluis@novell.com> 

	* monodevelop.in: Set MONODEVELOP_DISPATCH_DEBUG when running with
	--debug option.

2005-07-15  John Luke  <john.luke@gmail.com>

	* .mdp: set localcopy="False"

2005-07-15  John Luke  <john.luke@gmail.com>

	* .mdp: update
	* MonoDevelop.mds: update gtk-sharp versions and
	add some new files
	
2005-07-15  John Luke  <john.luke@gmail.com>

	* configure.in: sort AC_OUTPUT section
	* help/: mv from Core/help
	* xmldocs.make: move from Core/xmldocs.make
	* omf.make: move from Core/omf.make

2005-07-13  Lluis Sanchez Gual  <lluis@novell.com> 

	* configure.in: Added options for building the NUunit addin and the
	mono extensions addin.

2005-07-08  John Luke  <john.luke@gmail.com>

	* configure.in: update mono dep to >= 1.1.4
	for various reasons and remove the MONO_POSIX_OEE
	check
	* README: update deps

2005-06-28  John Luke  <john.luke@gmail.com>

	* *.mdp:
	* MonoDevelop.mds: partial MonoDevelop project files for testing

2005-06-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.include (build_sources): Allow Makefiles to define
	GENERATED_FILES that are picked up from builddir.

2005-06-22  Joshua Tauberer  <tauberer@for.net>
	* configure.in: Added Extras/VersionControl automake files to the
	  build.
	* Extras/VersionControl: Checked in VersionControl addin files.

2005-06-08  Todd Berman  <tberman@off.net>

	* monodevelop.in: Remove bashism, patch from meebey (mail@meebey.net)

2005-06-01  Todd Berman  <tberman@off.net>
