@@ -148,6 +148,13 @@ if test "x$enable_monoextensions" = "xyes"; then
 	fi
 fi
 
+AC_ARG_ENABLE(versioncontrol,
+	AC_HELP_STRING([--enable-versioncontrol],
+		[enable version control support [default=no]]),
+		enable_versioncontrol=yes, enable_versioncontrol=no)
+
+AM_CONDITIONAL(ENABLE_VERSIONCONTROL, test x$enable_versioncontrol = xyes)
+
 MOZILLA_HOME="`$PKG_CONFIG --variable=libdir mozilla-gtkmozembed`"
 AC_SUBST(MOZILLA_HOME)
 
@@ -263,4 +270,5 @@ echo "   * java support: $enable_java"
 echo "   * boo support: $enable_boo"
 echo "   * NUnit support: $enable_nunit"
 echo "   * Mono class library development extensions: $enable_monoextensions"
+echo "   * Version control support: $enable_versioncontrol"
 echo ""
