@@ -1,3 +1,12 @@
+2005-08-08  John Luke  <john.luke@gmail.com>
+
+	* AddIn/Makefile.am:
+	* Diff/Makefile.am:
+	* DiffWidget/Makefile.am:
+	* VersionControl/Makefile.am: fix distcheck,
+	make it conditional on ENABLE_VERSIONCONTROL,
+	and install it when enabled
+
 2005-07-01  Joshua Tauberer <tauberer@for.net>
 
 	* Added MD solution files for VersionControl.
